<resources>
    <string name="app_name">RandomTriviaApp</string>
    <string name="question1">Who is the 44th president of the United States?</string>
    <string name="answer1">Barack Obama</string>
    <string name="answer2">Bill Clinton</string>
    <string name="answer3">George H. W. Bush</string>
    <string name="toggleOn">Toggle On</string>
    <string name="toggleOff">Toggle Off</string>
    <string name="save_btn">Save Button</string>
    <string name="edit_btn">Edit Button</string>
    <string name="cancel_btn">Cancel Button</string>
    <string name="create_btn">Create Button</string>
    <string name="write_new_question">Write a new question here</string>
    <string name="write_correct_answer">Write the correct answer here</string>
    <string name="write_wrong_answer">Write a wrong answer here</string>
</resources>
